Cleanup and replace deprecated for removal methods