@@ -464,9 +464,9 @@ public class ImageJ extends Frame implements ActionListener,
 			Hashtable macroShortcuts = Menus.getMacroShortcuts();
 			if (macroShortcuts.size()>0) {
 				if (shift)
-					cmd = (String)macroShortcuts.get(new Integer(keyCode+200));
+					cmd = (String)macroShortcuts.get(Integer.valueOf(keyCode+200));
 				else
-					cmd = (String)macroShortcuts.get(new Integer(keyCode));
+					cmd = (String)macroShortcuts.get(Integer.valueOf(keyCode));
 				if (cmd!=null) {
 					commandName = cmd;
 					MacroInstaller.runMacroShortcut(cmd);
@@ -484,9 +484,9 @@ public class ImageJ extends Frame implements ActionListener,
 		if ((!Prefs.requireControlKey||control||meta||functionKey||numPad) && keyChar!='+') {
 			Hashtable shortcuts = Menus.getShortcuts();
 			if (shift && !functionKey)
-				cmd = (String)shortcuts.get(new Integer(keyCode+200));
+				cmd = (String)shortcuts.get(Integer.valueOf(keyCode+200));
 			else
-				cmd = (String)shortcuts.get(new Integer(keyCode));
+				cmd = (String)shortcuts.get(Integer.valueOf(keyCode));
 		}
 		
 		if (cmd==null) {
